# Finance-Assistant

./: .env.example  .gitignore  Assistant_V13.ipynb  Basic Agent.ipynb  README.md  README_new.md  manage.sh  pyproject.toml  start_backend.py
backend/: Dockerfile
backend/app/: __init__.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: __init__.py  ai.py  ai_queries.py  companies.py  technical.py  technical_analysis.py
backend/app/services/: __init__.py  ai.py  ai_financial_assistant.py  ai_query_processor.py  cache_service.py  companies.py  company_database.py  data_cache.py  dynamic_companies.py  fortune500_service.py  huggingface_ai.py  simple_companies.py  stock_data.py  stock_data_service.py  yahoo_finance_clean.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api_services/: financial_api_client.js
frontend/src/components/: AIChat.jsx  CompanyCard.jsx  CompanyInfoCard.jsx  CompanySearchBar.jsx  FinancialChatbot.jsx  Header.jsx  StockAnalysisPanel.jsx  TechnicalAnalysis.jsx
frontend/src/services/: api.js
