[project]
name = "finance-assistant"
description = "Comprehensive financial analysis platform with AI-powered queries, technical analysis, and portfolio optimization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core web framework
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.7",
    
    # Stock data
    "yfinance>=0.2.65",
    "pandas>=2.3.1",
    "numpy>=1.24.0",
    
    # AI/ML for financial analysis
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentence-transformers>=2.2.0",
    
    # Basic utilities
    "python-dateutil>=2.8.2",
    "requests>=2.31.0",
    "cachetools>=5.3.0",
]
